# GravitonDemo

./: README.md  godemo.go  socketdemo_python2.py  socketdemo_python3.py
graviton-demo-go/: go.mod  godemo.go
graviton-demo-nodejs/: nodejsdemo.js  package.json
graviton-demo-php/: appspec.yml  buildspec.yml  index.php
graviton-demo-php/assets/scripts/: before_install.sh  data.sql  start_server.sh
graviton-demo-python/: python2demo.py  python3demo.py  socketdemo_python3.py
graviton-demo-ruby/: rubydemo.rb
graviton-demo-rust/: Cargo.toml
graviton-demo-rust/src/: main.rs
graviton-demo-springboot/: pom.xml
graviton-demo-springboot/src/main/java/com/example/graviton2demo/: Graviton2DemoApplication.java
graviton-demo-springboot/src/main/java/com/example/graviton2demo/controllers/: EchoDemo.java
graviton-demo-springboot/src/main/java/com/example/graviton2demo/pojo/: EchoInoPojo.java
graviton-demo-springboot/src/main/java/com/example/graviton2demo/services/: EchoService.java
graviton-demo-springboot/src/main/resources/: application.properties
graviton-demo-springboot/src/test/java/com/example/graviton2demo/: Graviton2DemoApplicationTests.java
