[package]
name = "graviton2-demo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
ec2_instance_metadata = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
rustc_version_runtime = "0.2.1"
